--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -12,6 +12,11 @@ ul {
   gap: 3rem;
   list-style: none;
   font-size: 1.1rem;
+
+  li {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .nav-actions {
@@ -39,13 +44,5 @@ ul {
     background: none;
     padding: 0.3rem;
     transition: all 0.5s ease-in;
-  }
-}
-
-.nav-icon {
-  font-size: 2.2rem;
-  color: #999999;
-
-  &:focus {
   }
 }
