--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,6 +1,5 @@
-@import "navigation.scss";
-
 $poppins: "Poppins", sans-serif;
+$deep-blue: #4f7cac;
 
 * {
   padding: 0;
@@ -16,3 +15,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
+
+@import "./variables";
+@import "./navigation.scss";
+@import "./hero";
