--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,5 +1,3 @@
-@import "navigation.scss";
-
 $poppins: "Poppins", sans-serif;
 
 * {
@@ -16,3 +14,7 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
+
+@import "./variables";
+@import "navigation.scss";
+@import "./hero";
