--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,4 +1,5 @@
 $poppins: "Poppins", sans-serif;
+$yellow: #ffc800;
 
 * {
   padding: 0;
@@ -18,3 +19,4 @@ body {
 @import "./variables";
 @import "navigation.scss";
 @import "./hero";
+@import "./product-showcase";
