--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,6 +1,7 @@
 $poppins: "Poppins", sans-serif;
 $yellow: #ffc800;
 $ice-blue: #34e5ff;
+$deep-blue: #4f7cac;
 
 * {
   padding: 0;
@@ -17,12 +18,14 @@ body {
   margin: 0 auto;
 }
 
-section {
+section,
+footer {
   padding: 3rem 1rem;
 }
 
 @import "./variables";
-@import "navigation.scss";
+@import "./navigation.scss";
 @import "./hero";
 @import "./product-showcase";
 @import "./services";
+@import "./footer";
