--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -158,11 +158,13 @@ nav ul {
     }
   }
 
-  li,
-  .close-icon,
-  .main-link,
-  .sub-link {
-    color: white;
+  nav {
+    li,
+    .close-icon,
+    .main-link,
+    .sub-link {
+      color: white;
+    }
   }
 
   .main-link {
