--- a/client/src/styles/product-page.scss
+++ b/client/src/styles/product-page.scss
@@ -12,9 +12,21 @@
 }
 
 .product-amount-control {
+  border: 2px solid rgba(141, 141, 141, 0.651);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 150px;
+  border-radius: 8px;
   button {
     @include primary-button(transparent);
     color: #111;
+    padding: 0.5rem 1rem;
+  }
+
+  p {
+    width: 50px;
+    text-align: center;
   }
 }
 
@@ -31,7 +43,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.5rem;
 
     p {
       font-size: 1.2rem;
@@ -42,7 +54,7 @@
       font-weight: 600;
     }
 
-    .product-price {
+    .product-item {
       display: flex;
       align-items: baseline;
       gap: 1rem;
@@ -51,10 +63,16 @@
   }
 }
 
+.condition span {
+  padding: 0rem 0.5rem;
+  border-radius: 8px;
+}
+
 .product-description {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  padding-top: 5rem;
 
   p {
     font-size: 1.1rem;
