--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -9,3 +9,15 @@
   cursor: pointer;
   letter-spacing: 1.5px;
 }
+
+@mixin icon-close-hover {
+  cursor: pointer;
+  border-radius: 50%;
+  transition: 0.5s;
+
+  &:hover {
+    background-color: #162521;
+    padding: 0.2rem;
+    color: white;
+  }
+}
