--- a/client/src/styles/cart.scss
+++ b/client/src/styles/cart.scss
@@ -1,15 +1,34 @@
-.carttest {
+.cart-icons {
   position: relative;
   display: flex;
   align-items: center;
   width: 100%;
+
+  svg {
+    cursor: pointer;
+  }
+
+  span {
+    position: absolute;
+    background-color: $cyan;
+    color: white;
+    text-align: center;
+    width: 25px;
+    height: 25px;
+    border-radius: 9999px;
+    bottom: -10px;
+    right: -5px;
+    font-size: 0.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .cart-preview {
   position: absolute;
   top: 100%;
-  left: 50%;
-  transform: translateX(-50%);
+  right: 0;
   z-index: 200;
   border: 2px solid rgb(172, 172, 172);
   background-color: #fff;
@@ -49,12 +68,14 @@
   flex-direction: column;
   padding-right: 0.5rem;
   width: 100%;
-  p {
+  a {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-decoration: none;
+    color: $metal-black;
   }
 }
 
