--- a/client/src/styles/_product-showcase.scss
+++ b/client/src/styles/_product-showcase.scss
@@ -21,7 +21,7 @@
 
 .product-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
 
   img {
@@ -33,6 +33,8 @@
   position: relative;
   cursor: pointer;
   transition: 0.1s;
+  text-decoration: none;
+  color: $metal-black;
 
   &:hover {
     padding: 0.2rem;
@@ -41,24 +43,42 @@
 
 .product-details {
   font-size: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1rem;
+  text-decoration: none;
   text-align: center;
 
+  a,
   p {
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding: 0rem 1rem;
+    color: $metal-black;
   }
 }
 
 .price-container {
-  //display: flex;
   justify-content: center;
   gap: 2rem;
+}
+
+@media (max-width: 600px) {
+  .header-row {
+    h2 {
+      font-size: 1.2rem;
+    }
+    button {
+      padding: 0.5rem 1rem;
+    }
+  }
+
+  .card {
+    text-align: center;
+    p {
+      font-size: 1.2rem;
+    }
+  }
+  .product-grid img {
+    width: 80%;
+  }
 }
