--- a/client/src/styles/all-products.scss
+++ b/client/src/styles/all-products.scss
@@ -1,6 +1,17 @@
 .url-header h2 {
   font-size: 2.5rem;
   font-weight: 500;
+  padding-bottom: 2rem;
+  text-transform: capitalize;
+}
+
+.search-layout {
+  display: flex;
+  gap: 5rem;
+}
+
+.search-results {
+  display: grid;
 }
 
 .filter-container {
@@ -8,6 +19,7 @@
   width: 100%;
   border: 1px solid rgb(170, 170, 170);
   padding: 1.5rem;
+  height: 100%;
 }
 
 .filter-part {
