--- a/client/src/styles/_product-showcase.scss
+++ b/client/src/styles/_product-showcase.scss
@@ -15,7 +15,8 @@
   text-align: right;
   background-color: $yellow;
   padding: 0.2rem 0.8rem;
-  right: 0;
+  right: 16px;
+  top: 16px;
   font-size: 1.5rem;
 }
 
@@ -33,12 +34,29 @@
 .card {
   position: relative;
   cursor: pointer;
+  padding: 1rem;
   transition: 0.1s;
   text-decoration: none;
   color: $metal-black;
+  box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
+  transition: box-shadow 0.18s ease-in-out;
+  z-index: 200;
+  &:hover::after {
+    opacity: 1;
+  }
 
-  &:hover {
-    padding: 0.2rem;
+  &::after {
+    content: "";
+    position: absolute;
+    pointer-events: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    box-shadow: 0px 5px 25px 2px rgba(0, 0, 0, 0.25);
+    transition: opacity ease 0.5s;
+    z-index: 1;
   }
 }
 
