--- a/client/src/styles/all-products.scss
+++ b/client/src/styles/all-products.scss
@@ -14,7 +14,7 @@
   display: grid;
 }
 
-.filter-container {
+.filter {
   max-width: 250px;
   width: 100%;
   border: 1px solid rgb(170, 170, 170);
@@ -32,5 +32,11 @@
 .input-box {
   input {
     margin-right: 0.5rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .filter {
+    @include sidepanel(#fff);
   }
 }
