--- a/client/src/styles/cart.scss
+++ b/client/src/styles/cart.scss
@@ -142,3 +142,42 @@
     height: auto;
   }
 }
+
+.cart-page-header {
+  margin-bottom: 2rem;
+  h2 {
+    border-bottom: 2px solid $deep-blue;
+    padding-bottom: 1rem;
+  }
+}
+
+.cart-page-content {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+}
+
+.cart-page-summary {
+  max-width: 300px;
+  background-color: #f4f4f4;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+
+  h3 {
+    width: 100%;
+    border-bottom: 2px solid $deep-blue;
+    padding-bottom: 0.5rem;
+  }
+}
+
+.summary-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.summary-button {
+  @include primary-button($deep-blue);
+  padding: 0.5rem 1.5rem;
+}
