--- a/client/src/styles/navigation.scss
+++ b/client/src/styles/navigation.scss
@@ -1,10 +1,17 @@
-nav {
-  display: flex;
-  max-width: 1200px;
-  margin: 0 auto;
-  justify-content: space-between;
-  padding: 2rem 1rem;
-  align-items: center;
+.top-navigation {
+  position: sticky;
+  top: 0;
+  background-color: white;
+  padding: 1rem 1rem;
+  z-index: 999;
+
+  .container-md {
+    display: flex;
+    max-width: 1200px;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .menu {
@@ -28,9 +35,13 @@ nav ul {
     &.active .dropdown-container {
       display: block;
     }
+
+    &.close-icon {
+      padding-top: 0rem;
+    }
   }
 
-  li:not(.close-icon):hover::after {
+  /*  li:not(.close-icon):hover::after {
     position: absolute;
     bottom: 0;
     content: "";
@@ -38,7 +49,7 @@ nav ul {
     background-color: #4f7cac;
     height: 3px;
     border-radius: 8px;
-  }
+  }*/
 }
 
 .nav-actions {
@@ -95,6 +106,8 @@ nav ul {
   grid-template-columns: repeat(3, minmax(200px, 1fr));
   gap: 1rem;
   z-index: 100;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 8px 8px;
+  background: white;
 }
 
 .dropdown-item {
@@ -147,6 +160,7 @@ nav ul {
   .dropdown {
     position: relative;
     grid-template-columns: 1fr;
+    box-shadow: none;
   }
 
   .nav {
