--- a/client/src/styles/_product-showcase.scss
+++ b/client/src/styles/_product-showcase.scss
@@ -25,6 +25,7 @@
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 2rem;
   width: 100%;
+  height: 100%;
 
   img {
     width: 100%;
@@ -41,6 +42,7 @@
   box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.18s ease-in-out;
   z-index: 200;
+
   &:hover::after {
     opacity: 1;
   }
