--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -29,6 +29,13 @@ footer {
   padding: 3rem 1rem;
 }
 
+button {
+  @include primary-button(#4f7cac);
+  padding: 1rem 2rem;
+  font-weight: 500;
+  align-self: baseline;
+}
+
 .discount-span {
   color: gray;
   margin-right: 0.5rem;
