--- a/client/src/styles/product-page.scss
+++ b/client/src/styles/product-page.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   gap: 2rem;
   align-items: flex-start;
+  padding: 5rem 0rem;
 
   img {
     max-width: 500px;
