--- a/client/src/styles/_product-showcase.scss
+++ b/client/src/styles/_product-showcase.scss
@@ -26,7 +26,6 @@
   gap: 2rem;
   width: 100%;
   height: 100%;
-
   img {
     width: 100%;
   }
@@ -34,6 +33,9 @@
 
 .card {
   position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   cursor: pointer;
   padding: 1rem;
   transition: 0.1s;
@@ -42,6 +44,7 @@
   box-shadow: 0px 1px 3px 0 rgba(0, 0, 0, 0.2);
   transition: box-shadow 0.18s ease-in-out;
   z-index: 200;
+  height: 100%;
 
   &:hover::after {
     opacity: 1;
@@ -95,6 +98,10 @@
     text-overflow: ellipsis;
     color: $metal-black;
     font-size: 1.2rem;
+  }
+
+  p:not(.discount-sticker) {
+    height: 4rem;
   }
 }
 
