--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -29,6 +29,10 @@ footer {
   padding: 3rem 1rem;
 }
 
+.box {
+  padding: 4rem 0rem;
+}
+
 button {
   @include primary-button(#4f7cac);
   padding: 1rem 2rem;
