--- a/client/src/styles/all-products.scss
+++ b/client/src/styles/all-products.scss
@@ -78,10 +78,10 @@
   }
 
   select {
-    margin-left: 2rem;
-    padding-left: 1rem;
-    width: 180px;
+    padding-left: 0.5rem;
+    width: 170px;
     font-size: 1rem;
+    flex: 1;
   }
 }
 
